[metadata]
name = pre_commit_secrets
version = 0.1.0
description = Some experimental hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ryanbreed-tp/pre-commit-hooks
author = Ryan Breed
author_email = ryan.breed@theta-point.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    flake8
    ruamel.yaml>=0.15
    six
    yara-python
    typing; python_version<"3.5"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

[options.entry_points]
console_scripts =
    secrets-crypto = pre_commit_hooks.detect_crypto:main

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
